Fix layout on smaller screens
Add button styles and higher contrast to buttons.

--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,10 @@
 html,
 body {
   margin: 0;
+  height: 100%;
   font-family: "Inter", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: 100%;
   color: #293264;
   background-color: #f5f7fb;
 }
@@ -23,6 +23,8 @@ body {
   align-items: center;
   flex-direction: column;
   height: 100%;
+  min-height: 220px;
+  min-width: 250px;
 }
 
 .title {
@@ -39,7 +41,7 @@ body {
 
 .start-btn {
   margin-top: 30px;
-  color: #f5f7fb;
+  color: #ffffff;
   font-weight: 500;
   font-size: 16px;
   line-height: 19px;
@@ -57,12 +59,13 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  margin: 10px;
 }
 
 .quiz-question-group {
   border-bottom: 1px solid #dbdef0;
-  width: 80%;
+  width: 100%;
+  height: auto;
 }
 
 .quiz-question {
@@ -72,15 +75,46 @@ body {
   line-height: 19px;
 }
 
+.quiz-choices {
+  min-width: 64px;
+  height: 32px;
+  border-radius: 8px;
+  font-family: "Inter", sans-serif;
+  font-weight: 500;
+  line-height: 12px;
+  text-align: center;
+  margin: 0 13px 15px 0;
+  padding: 1px 8px;
+  color: #293264;
+  background: #f5f7fb;
+  border: 1px solid #293264;
+  cursor: pointer;
+}
+
+.quiz-choices:hover {
+  background: #d6dbf5;
+  border: 1px solid #d6dbf5;
+}
+
 .quiz-btn {
   background: #4d5b9e;
-  color: #f5f7fb;
+  color: #ffffff;
   border-radius: 10px;
-  margin: 20px 0 0 0;
+  margin: 20px 0;
   width: 140px;
   height: 45px;
   font-family: "Inter", sans-serif;
   font-weight: 600;
   border: none;
   cursor: pointer;
+}
+
+@media screen and (min-width: 500px) {
+  .quiz-question-group {
+    width: 80%;
+  }
+  .quiz-screen {
+    margin: 0;
+    min-height: 100%;
+  }
 }
